--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Hero -->
   <section class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-20 text-center">
     <h1 class="text-5xl font-bold mb-4">Michael Boktor</h1>
-    <p class="text-xl">Computer & Communication Engineering Student | FPGA & SystemVerilog Enthusiast</p>
+    <p class="text-xl">Electronics & Communication Engineer | FPGA & SystemVerilog Enthusiast</p>
     <div class="mt-6 space-x-4">
       <a href="mailto:michaelboktor3@gmail.com" class="px-4 py-2 bg-white text-blue-600 font-semibold rounded-lg shadow">Email Me</a>
       <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="px-4 py-2 border border-white rounded-lg">LinkedIn</a>
@@ -24,7 +24,7 @@
   <section class="max-w-5xl mx-auto px-6 py-16">
     <h2 class="text-3xl font-bold mb-4">About Me</h2>
     <p class="text-lg leading-relaxed">
-      I am a passionate Computer & Communication Engineering student at Cairo University. 
+      I am a fresh graduate in Electronics & Communication Engineering from Cairo University. 
       With a strong foundation in digital design, FPGA development, and SystemVerilog, 
       I merge technical precision with creative problem-solving. 
       I thrive on projects that bridge hardware and software, especially in accelerating AI/ML algorithms on FPGAs.
@@ -52,58 +52,83 @@
     </div>
   </section>
 
-  <!-- Experience & Education -->
+  <!-- Education -->
   <section class="max-w-5xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold mb-6">Experience & Education</h2>
+    <h2 class="text-3xl font-bold mb-6">Education</h2>
     <ul class="space-y-4">
       <li>
-        <h3 class="font-semibold">Networks Intern – Nokia Egypt (Aug–Sep 2024)</h3>
-        <p>Worked on LTE & 5G network infrastructure and performance optimization.</p>
+        <h3 class="font-semibold">BSc in Electronics & Communication Engineering</h3>
+        <p>Cairo University, Credit Hours System (Sept 2020 – Jun 2025)</p>
+        <p>GPA: 3.42/4.0 | Graduation Project: FPGA Implementation of CNN Accelerated Automatic Modulation Classifier (Grade: A)</p>
       </li>
       <li>
-        <h3 class="font-semibold">Telecom Intern – Systel Telecom (Aug–Sep 2023)</h3>
-        <p>Gained hands-on knowledge in fiber optics, microwave & broadband communication.</p>
+        <h3 class="font-semibold">Digital Design Diploma</h3>
+        <p>Trained under Eng. Kareem Waseem (Jun 2024 – Aug 2024)</p>
+        <p>RTL Design, Verilog HDL, Vivado IP integration, STA & CDC techniques.</p>
       </li>
       <li>
-        <h3 class="font-semibold">BSc of Communications & Electronics Engineering – Cairo University (2020–2025)</h3>
-        <p>Specialized in Digital Systems, Communication Networks, and Signal Processing. GPA: 3.42/4.0.</p>
+        <h3 class="font-semibold">Digital Verification Diploma</h3>
+        <p>Trained under Eng. Kareem Waseem (Aug 2024 – Sep 2024)</p>
+        <p>SystemVerilog, UVM, code & functional coverage, formal verification.</p>
+      </li>
+      <li>
+        <h3 class="font-semibold">Fortinet Cybersecurity Engineer Track</h3>
+        <p>DEPI Program – Ongoing</p>
+        <p>Networking fundamentals, CCNA (200-301), firewall configuration, VPN, FortiManager.</p>
       </li>
     </ul>
   </section>
 
-  <!-- Projects -->
+  <!-- Experience -->
   <section class="bg-gray-100 py-16">
     <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-6">Key Projects</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">CNN FPGA Modulation Classifier</h3>
-          <p>FPGA-based CNN classifier for 10+ modulation schemes, achieving 98.6% accuracy.</p>
-        </div>
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">SPI Slave with Single Port RAM</h3>
-          <p>Optimized FSM encoding and pipelining, boosting throughput by 30%.</p>
-        </div>
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">DSP48A1 FPGA Slice</h3>
-          <p>Implemented efficient DSP slice with 25% performance improvement.</p>
-        </div>
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">UVM FIFO Verification Environment</h3>
-          <p>Developed a complete UVM environment with 100% functional coverage.</p>
-        </div>
+      <h2 class="text-3xl font-bold mb-6">Experience</h2>
+      <ul class="space-y-4">
+        <li>
+          <h3 class="font-semibold">Networks Intern – Nokia Egypt (Aug–Sep 2024)</h3>
+          <p>Worked on LTE & 5G network infrastructure and performance optimization.</p>
+        </li>
+        <li>
+          <h3 class="font-semibold">Telecom Intern – Systel Telecom (Aug–Sep 2023)</h3>
+          <p>Gained hands-on knowledge in fiber optics, microwave & broadband communication.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="max-w-5xl mx-auto px-6 py-16">
+    <h2 class="text-3xl font-bold mb-6">Key Projects</h2>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="font-semibold mb-2">CNN FPGA Modulation Classifier</h3>
+        <p>FPGA-based CNN classifier for 10+ modulation schemes, achieving 98.6% accuracy.</p>
+      </div>
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="font-semibold mb-2">SPI Slave with Single Port RAM</h3>
+        <p>Optimized FSM encoding and pipelining, boosting throughput by 30%.</p>
+      </div>
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="font-semibold mb-2">DSP48A1 FPGA Slice</h3>
+        <p>Implemented efficient DSP slice with 25% performance improvement.</p>
+      </div>
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="font-semibold mb-2">UVM FIFO Verification Environment</h3>
+        <p>Developed a complete UVM environment with 100% functional coverage.</p>
       </div>
     </div>
   </section>
 
   <!-- Services -->
-  <section class="max-w-5xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold mb-6">Services Offered</h2>
-    <ul class="list-disc pl-6 space-y-2">
-      <li>Logo & Brand Identity Design</li>
-      <li>SystemVerilog Testbenches & Verification</li>
-      <li>FPGA Design Consulting</li>
-    </ul>
+  <section class="bg-gray-100 py-16">
+    <div class="max-w-5xl mx-auto px-6">
+      <h2 class="text-3xl font-bold mb-6">Services Offered</h2>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>Logo & Brand Identity Design</li>
+        <li>SystemVerilog Testbenches & Verification</li>
+        <li>FPGA Design Consulting</li>
+      </ul>
+    </div>
   </section>
 
   <!-- Contact -->
