--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <title>Michael Boktor | Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-gray-900 text-gray-200">
 
   <!-- Hero -->
-  <section class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-20 text-center">
+  <section class="bg-gradient-to-r from-gray-800 to-gray-900 text-white py-20 text-center">
     <h1 class="text-5xl font-bold mb-4">Michael Boktor</h1>
-    <p class="text-xl">Electronics & Communication Engineer | FPGA & SystemVerilog Enthusiast</p>
+    <p class="text-xl text-gray-300">Electronics & Communication Engineer | FPGA & SystemVerilog Enthusiast</p>
     <div class="mt-6 space-x-4">
-      <a href="mailto:michaelboktor3@gmail.com" class="px-4 py-2 bg-white text-blue-600 font-semibold rounded-lg shadow">Email Me</a>
-      <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="px-4 py-2 border border-white rounded-lg">LinkedIn</a>
-      <a href="https://github.com/Michael-Boktor" target="_blank" class="px-4 py-2 border border-white rounded-lg">GitHub</a>
-      <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="px-4 py-2 border border-white rounded-lg">Fiverr</a>
+      <a href="mailto:michaelboktor3@gmail.com" class="px-4 py-2 bg-teal-500 text-white font-semibold rounded-lg shadow hover:bg-teal-600">Email Me</a>
+      <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">LinkedIn</a>
+      <a href="https://github.com/Michael-Boktor" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">GitHub</a>
+      <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">Fiverr</a>
     </div>
   </section>
 
   <!-- About -->
   <section class="max-w-5xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold mb-4">About Me</h2>
-    <p class="text-lg leading-relaxed">
-      I am a fresh graduate in Electronics & Communication Engineering from Cairo University. 
+    <h2 class="text-3xl font-bold text-teal-400 mb-4">About Me</h2>
+    <p class="text-lg leading-relaxed text-gray-300">
+      I am a fresh graduate Electronics & Communication Engineer from Cairo University. 
       With a strong foundation in digital design, FPGA development, and SystemVerilog, 
       I merge technical precision with creative problem-solving. 
       I thrive on projects that bridge hardware and software, especially in accelerating AI/ML algorithms on FPGAs.
@@ -32,20 +32,20 @@
   </section>
 
   <!-- Skills -->
-  <section class="bg-gray-100 py-16">
+  <section class="bg-gray-800 py-16">
     <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-6">Core Skills & Expertise</h2>
+      <h2 class="text-3xl font-bold text-teal-400 mb-6">Core Skills & Expertise</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">FPGA & HDL</h3>
+        <div class="p-6 bg-gray-700 rounded-2xl shadow">
+          <h3 class="font-semibold mb-2 text-teal-300">FPGA & HDL</h3>
           <p>SystemVerilog, Verilog, RTL Design, FPGA Design Flow, Vivado, QuestaSim, HLS.</p>
         </div>
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">Programming & ML</h3>
+        <div class="p-6 bg-gray-700 rounded-2xl shadow">
+          <h3 class="font-semibold mb-2 text-teal-300">Programming & ML</h3>
           <p>Python, C++, Matlab, Machine Learning, Convolutional Neural Networks (CNNs).</p>
         </div>
-        <div class="p-6 bg-white rounded-2xl shadow">
-          <h3 class="font-semibold mb-2">Creative Design</h3>
+        <div class="p-6 bg-gray-700 rounded-2xl shadow">
+          <h3 class="font-semibold mb-2 text-teal-300">Creative Design</h3>
           <p>Logo Design, Brand Identity, Adobe Photoshop, Adobe Illustrator.</p>
         </div>
       </div>
@@ -54,43 +54,43 @@
 
   <!-- Education -->
   <section class="max-w-5xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold mb-6">Education</h2>
-    <ul class="space-y-4">
+    <h2 class="text-3xl font-bold text-teal-400 mb-6">Education</h2>
+    <ul class="space-y-6">
       <li>
-        <h3 class="font-semibold">BSc in Electronics & Communication Engineering</h3>
+        <h3 class="font-semibold text-teal-300">BSc in Electronics & Communication Engineering</h3>
         <p>Cairo University, Credit Hours System (Sept 2020 – Jun 2025)</p>
-        <p>GPA: 3.42/4.0 | Graduation Project: FPGA Implementation of CNN Accelerated Automatic Modulation Classifier (Grade: A)</p>
+        <p class="text-gray-400">GPA: 3.42/4.0 | Graduation Project: FPGA Implementation of CNN Accelerated Automatic Modulation Classifier (Grade: A)</p>
       </li>
       <li>
-        <h3 class="font-semibold">Digital Design Diploma</h3>
-        <p>Trained under Eng. Kareem Waseem (Jun 2024 – Aug 2024)</p>
-        <p>RTL Design, Verilog HDL, Vivado IP integration, STA & CDC techniques.</p>
+        <h3 class="font-semibold text-teal-300">Digital Design Diploma</h3>
+        <p>Eng. Kareem Waseem (Jun 2024 – Aug 2024)</p>
+        <p class="text-gray-400">RTL Design, Verilog HDL, Vivado IP integration, STA & CDC techniques.</p>
       </li>
       <li>
-        <h3 class="font-semibold">Digital Verification Diploma</h3>
-        <p>Trained under Eng. Kareem Waseem (Aug 2024 – Sep 2024)</p>
-        <p>SystemVerilog, UVM, code & functional coverage, formal verification.</p>
+        <h3 class="font-semibold text-teal-300">Digital Verification Diploma</h3>
+        <p>Eng. Kareem Waseem (Aug 2024 – Sep 2024)</p>
+        <p class="text-gray-400">SystemVerilog, UVM, coverage analysis, formal verification.</p>
       </li>
       <li>
-        <h3 class="font-semibold">Fortinet Cybersecurity Engineer Track</h3>
+        <h3 class="font-semibold text-teal-300">Fortinet Cybersecurity Engineer Track</h3>
         <p>DEPI Program – Ongoing</p>
-        <p>Networking fundamentals, CCNA (200-301), firewall configuration, VPN, FortiManager.</p>
+        <p class="text-gray-400">CCNA (200-301), firewall configuration, VPNs, FortiManager.</p>
       </li>
     </ul>
   </section>
 
   <!-- Experience -->
-  <section class="bg-gray-100 py-16">
+  <section class="bg-gray-800 py-16">
     <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-6">Experience</h2>
-      <ul class="space-y-4">
+      <h2 class="text-3xl font-bold text-teal-400 mb-6">Experience</h2>
+      <ul class="space-y-6">
         <li>
-          <h3 class="font-semibold">Networks Intern – Nokia Egypt (Aug–Sep 2024)</h3>
-          <p>Worked on LTE & 5G network infrastructure and performance optimization.</p>
+          <h3 class="font-semibold text-teal-300">Networks Intern – Nokia Egypt (Aug–Sep 2024)</h3>
+          <p class="text-gray-300">Worked on LTE & 5G network infrastructure and performance optimization.</p>
         </li>
         <li>
-          <h3 class="font-semibold">Telecom Intern – Systel Telecom (Aug–Sep 2023)</h3>
-          <p>Gained hands-on knowledge in fiber optics, microwave & broadband communication.</p>
+          <h3 class="font-semibold text-teal-300">Telecom Intern – Systel Telecom (Aug–Sep 2023)</h3>
+          <p class="text-gray-300">Gained hands-on knowledge in fiber optics, microwave & broadband communication.</p>
         </li>
       </ul>
     </div>
@@ -98,32 +98,32 @@
 
   <!-- Projects -->
   <section class="max-w-5xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold mb-6">Key Projects</h2>
+    <h2 class="text-3xl font-bold text-teal-400 mb-6">Key Projects</h2>
     <div class="grid md:grid-cols-2 gap-8">
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h3 class="font-semibold mb-2">CNN FPGA Modulation Classifier</h3>
+      <div class="p-6 bg-gray-700 rounded-2xl shadow">
+        <h3 class="font-semibold text-teal-300 mb-2">CNN FPGA Modulation Classifier</h3>
         <p>FPGA-based CNN classifier for 10+ modulation schemes, achieving 98.6% accuracy.</p>
       </div>
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h3 class="font-semibold mb-2">SPI Slave with Single Port RAM</h3>
+      <div class="p-6 bg-gray-700 rounded-2xl shadow">
+        <h3 class="font-semibold text-teal-300 mb-2">SPI Slave with Single Port RAM</h3>
         <p>Optimized FSM encoding and pipelining, boosting throughput by 30%.</p>
       </div>
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h3 class="font-semibold mb-2">DSP48A1 FPGA Slice</h3>
+      <div class="p-6 bg-gray-700 rounded-2xl shadow">
+        <h3 class="font-semibold text-teal-300 mb-2">DSP48A1 FPGA Slice</h3>
         <p>Implemented efficient DSP slice with 25% performance improvement.</p>
       </div>
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h3 class="font-semibold mb-2">UVM FIFO Verification Environment</h3>
+      <div class="p-6 bg-gray-700 rounded-2xl shadow">
+        <h3 class="font-semibold text-teal-300 mb-2">UVM FIFO Verification Environment</h3>
         <p>Developed a complete UVM environment with 100% functional coverage.</p>
       </div>
     </div>
   </section>
 
   <!-- Services -->
-  <section class="bg-gray-100 py-16">
+  <section class="bg-gray-800 py-16">
     <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl font-bold mb-6">Services Offered</h2>
-      <ul class="list-disc pl-6 space-y-2">
+      <h2 class="text-3xl font-bold text-teal-400 mb-6">Services Offered</h2>
+      <ul class="list-disc pl-6 space-y-2 text-gray-300">
         <li>Logo & Brand Identity Design</li>
         <li>SystemVerilog Testbenches & Verification</li>
         <li>FPGA Design Consulting</li>
@@ -132,16 +132,16 @@
   </section>
 
   <!-- Contact -->
-  <section class="bg-indigo-700 text-white py-16 text-center">
-    <h2 class="text-3xl font-bold mb-4">Let's Connect!</h2>
-    <p>Email: <a href="mailto:michaelboktor3@gmail.com" class="underline">michaelboktor3@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="underline">linkedin.com/in/michael-boktor</a></p>
-    <p>GitHub: <a href="https://github.com/Michael-Boktor" target="_blank" class="underline">github.com/Michael-Boktor</a></p>
-    <p>Fiverr: <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="underline">fiverr.com/s/zWRlB5R</a></p>
+  <section class="bg-gradient-to-r from-gray-800 to-gray-900 text-white py-16 text-center">
+    <h2 class="text-3xl font-bold text-teal-400 mb-4">Let's Connect!</h2>
+    <p>Email: <a href="mailto:michaelboktor3@gmail.com" class="underline text-teal-300">michaelboktor3@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="underline text-teal-300">linkedin.com/in/michael-boktor</a></p>
+    <p>GitHub: <a href="https://github.com/Michael-Boktor" target="_blank" class="underline text-teal-300">github.com/Michael-Boktor</a></p>
+    <p>Fiverr: <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="underline text-teal-300">fiverr.com/s/zWRlB5R</a></p>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-400 py-6 text-center">
+  <footer class="bg-black text-gray-500 py-6 text-center">
     <p>© 2025 Michael Boktor. All Rights Reserved.</p>
   </footer>
 </body>
