--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="text-xl text-gray-300">Electronics & Communication Engineer | FPGA & SystemVerilog Enthusiast</p>
     <div class="mt-6 space-x-4">
       <a href="mailto:michaelboktor3@gmail.com" class="px-4 py-2 bg-teal-500 text-white font-semibold rounded-lg shadow hover:bg-teal-600">Email Me</a>
-      <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/michael-boktor~" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">LinkedIn</a>
       <a href="https://github.com/Michael-Boktor" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">GitHub</a>
       <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="px-4 py-2 border border-gray-400 rounded-lg hover:bg-gray-700">Fiverr</a>
     </div>
@@ -135,7 +135,7 @@
   <section class="bg-gradient-to-r from-gray-800 to-gray-900 text-white py-16 text-center">
     <h2 class="text-3xl font-bold text-teal-400 mb-4">Let's Connect!</h2>
     <p>Email: <a href="mailto:michaelboktor3@gmail.com" class="underline text-teal-300">michaelboktor3@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/michael-boktor" target="_blank" class="underline text-teal-300">linkedin.com/in/michael-boktor</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/michael-boktor~" target="_blank" class="underline text-teal-300">linkedin.com/in/michael-boktor</a></p>
     <p>GitHub: <a href="https://github.com/Michael-Boktor" target="_blank" class="underline text-teal-300">github.com/Michael-Boktor</a></p>
     <p>Fiverr: <a href="https://www.fiverr.com/s/zWRlB5R" target="_blank" class="underline text-teal-300">fiverr.com/s/zWRlB5R</a></p>
   </section>
@@ -146,3 +146,4 @@
   </footer>
 </body>
 </html>
+
